--- a/config/base/deployment.yaml
+++ b/config/base/deployment.yaml
@@ -20,9 +20,12 @@ spec:
       labels:
         deployment: person-service
     spec:
+      serviceAccountName: book-helm-sa
       containers:
         - image: image-registry.openshift-image-registry.svc:5000/book-dev/person-service:latest
           imagePullPolicy: IfNotPresent
+          securityContext:
+            runAsUser: 0 
           name: person-service
           ports:
             - containerPort: 8080
